sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: '<-' expected but '=' found.
  for(i = getNombreValeurs()- 2 to 1 by -1)
        ^AlgInsertionSort:17: error: illegal start of simple expression
} 
^